<resources>
    <string name="app_name">Viikko11_5</string>

    <string name="Settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Language">Language</string>
    <string name="Font">Font</string>
    <string name="Width">Width</string>
    <string name="Height">Height</string>
    <string name="Bold">Bold</string>
    <string name="Italic">Italic</string>
    <string name="Allow_editing">Allow editing</string>
    <string name="Confirm">Confirm language</string>

    <string name="Insert">Insert something here</string>
    <string name="Text">This is a test text. This TextView can be edited from the Settings, which are located in the navigation drawer.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
